# digit-neural-net

./: CMakeLists.txt  README.md  test20251021_041420
Components/: button.cpp  button.hpp  button_grid.cpp  button_grid.hpp  histogram.cpp  histogram.hpp  probability_histogram.cpp  probability_histogram.hpp  ui_manager.cpp  ui_manager.hpp
neural_net/: helper.cpp  helper.hpp  net.cpp  net.hpp
src/: evaluate_model.cpp  loadEval.cpp  main.cpp  nntest.cpp  train.cpp
